@@ -8,46 +8,51 @@ import com.example.contactapp.service.ContactService;
 import java.util.List;
 import java.util.Optional;
 import java.util.Scanner;
+import java.util.concurrent.Executors;
+import java.util.concurrent.ThreadFactory;
 
 public class Main {
     private static final String STORAGE = "data/contacts.csv";
 
-    private static final String MENU =
-            "Contact Manager (Java 8 demo)\n" +
-            "Commands:\n" +
-            "  list                - list contacts\n" +
-            "  add Name, email     - add contact\n" +
-            "  find <id>           - find contact by id\n" +
-            "  delete <id>         - delete contact by id\n" +
-            "  m|menu              - show this menu\n" +
-            "  q|quit|exit         - exit\n" +
-            "\n";
-    private static final String USAGE_ADD =
-            "Usage:\n" +
-            "  add Name, email@example.com\n" +
-            "\n";
+    private static final String MENU = """
+            Contact Manager (Java 21 demo)
+            Commands:
+              list                - list contacts
+              add Name, email     - add contact
+              find <id>           - find contact by id
+              delete <id>         - delete contact by id
+              m|menu              - show this menu
+              q|quit|exit         - exit
+
+            """;
+    private static final String USAGE_ADD = """
+            Usage:
+              add Name, email@example.com
+
+            """;
 
     public static void main(String[] args) {
         final ContactRepository repo = new ContactRepository(STORAGE);
         final ContactService service = new ContactService(repo);
 
-        Thread background = new Thread(() -> {
-            while (true) {
+        ThreadFactory virtualThreadFactory = Thread.ofVirtual().name("background-task-", 0).factory();
+        var executor = Executors.newThreadPerTaskExecutor(virtualThreadFactory);
+
+        executor.execute(() -> {
+            while (!Thread.currentThread().isInterrupted()) {
                 try {
                     Thread.sleep(10_000);
                     // simple heartbeat: load count and print
                     List<Contact> list = repo.findAll();
                     System.out.println("[Background] Stored contacts: " + list.size());
                 } catch (InterruptedException e) {
-                    Thread.currentThread().interrupt();
+                    Thread.currentThread().interrupt(); // Restore interrupt status
                     break;
                 } catch (Exception e) {
                     System.err.println("[Background] Error: " + e.getMessage());
                 }
             }
         });
-        background.setDaemon(true);
-        background.start();
 
         Scanner scanner = new Scanner(System.in);
         try {
@@ -71,45 +76,40 @@ public class Main {
                 }
 
                 try {
-                   if (command instanceof QuitCmd) {
-                        System.out.println("Exiting...");
-                        running = false;
-
-                    } else if (command instanceof MenuCmd) {
-                        printMenu();
-
-                    } else if (command instanceof ListCmd) {
-                        List<Contact> all = service.listContactsSortedByName();
-                        if (all.isEmpty()) {
-                            System.out.println("(no contacts)");
-                        } else {
-                            for (Contact c : all) {
-                                System.out.println(c.getId() + ": " + c.getName()
-                                        + " <" + c.getEmail() + "> added:" + c.getCreatedAt());
+                   switch (command) {
+                        case QuitCmd qc -> {
+                            System.out.println("Exiting...");
+                            running = false;
+                        }
+                        case MenuCmd mc -> printMenu();
+                        case ListCmd lc -> {
+                            List<Contact> all = service.listContactsSortedByName();
+                            if (all.isEmpty()) {
+                                System.out.println("(no contacts)");
+                            } else {
+                                for (Contact c : all) {
+                                    System.out.println(c.getId() + ": " + c.getName()
+                                            + " <" + c.getEmail() + "> added:" + c.getCreatedAt());
+                                }
                             }
                         }
-
-                    } else if (command instanceof Add) {
-                        Add add = (Add) command; // J21-upgrade: record pattern `case Add(String name, String email)`
-                        Contact c = service.addContact(add.name, add.email);
-                        System.out.println("Added: " + c);
-
-                    } else if (command instanceof Find) {
-                        Find find = (Find) command; // J21-upgrade: record pattern
-                        Optional<Contact> opt = service.findById(find.id);
-                        if (opt.isPresent()) {
-                            System.out.println(opt.get());
-                        } else {
-                            System.out.println("Not found: " + find.id);
+                        case Add add -> {
+                            Contact c = service.addContact(add.name, add.email);
+                            System.out.println("Added: " + c);
                         }
-
-                    } else if (command instanceof DeleteCmd) {
-                        DeleteCmd del = (DeleteCmd) command; // J21-upgrade: record pattern
-                        boolean ok = service.delete(del.id);
-                        System.out.println(ok ? ("Deleted " + del.id) : ("Not found " + del.id));
-
-                    } else if (command instanceof UnknownCmd) {
-                        System.out.println("Unknown command. Type 'm' for menu.");
+                        case Find find -> {
+                            Optional<Contact> opt = service.findById(find.id);
+                            if (opt.isPresent()) {
+                                System.out.println(opt.get());
+                            } else {
+                                System.out.println("Not found: " + find.id);
+                            }
+                        }
+                        case DeleteCmd del -> {
+                            boolean ok = service.delete(del.id);
+                            System.out.println(ok ? ("Deleted " + del.id) : ("Not found " + del.id));
+                        }
+                        case UnknownCmd uc -> System.out.println("Unknown command. Type 'm' for menu.");
                     }
                 } catch (NullPointerException npe) {
                     // Enhanced NPE details are automatic on JDK 14+; Java 8 will show standard message.
@@ -123,13 +123,8 @@ public class Main {
                 }
             }
         } finally {
-            // Stop background thread politely
-            background.interrupt();
-            try {
-                background.join(1000);
-            } catch (InterruptedException ignored) {
-                Thread.currentThread().interrupt();
-            }
+            // Shutdown the executor gracefully
+            executor.shutdownNow();
             scanner.close();
         }
     }
@@ -138,7 +133,6 @@ public class Main {
         System.out.print(MENU);
     }
 
-    
     private static Command parse(String line) {
         if (line == null || line.trim().isEmpty()) return new UnknownCmd("");
 
@@ -175,34 +169,20 @@ public class Main {
         }
     }
 
+    // Convert to sealed interface and record classes
+    sealed interface Command permits ListCmd, Add, Find, DeleteCmd, MenuCmd, QuitCmd, UnknownCmd {}
 
-    static final class ListCmd implements Command { }
+    record ListCmd() implements Command {}
 
-    static final class Add implements Command {
-        final String name;
-        final String email;
-        Add(String name, String email) {
-            this.name = name;
-            this.email = email;
-        }
-    }
+    record Add(String name, String email) implements Command {}
 
-    static final class Find implements Command {
-        final int id;
-        Find(int id) { this.id = id; }
-    }
+    record Find(int id) implements Command {}
 
-    static final class DeleteCmd implements Command {
-        final int id;
-        DeleteCmd(int id) { this.id = id; }
-    }
+    record DeleteCmd(int id) implements Command {}
 
-    static final class MenuCmd implements Command { }
+    record MenuCmd() implements Command {}
 
-    static final class QuitCmd implements Command { }
+    record QuitCmd() implements Command {}
 
-    static final class UnknownCmd implements Command {
-        final String raw;
-        UnknownCmd(String raw) { this.raw = raw; }
-    }
+    record UnknownCmd(String raw) implements Command {}
 }
